Fix Anime Searcher Thumbnail Embed